# label-resizer

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: type-check.yml
src/: cli.py
src/pdf_manipulator/: __init__.py  transform_pdf.py
