[tool.poetry]
name = "label-resizer"
version = "0.1.0"
description = ""
authors = ["JP Barela"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
pypdf = "^6.5.0"
click = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)"
]
